test/should-fail/vsgc1700.f3
/**
 * Regression test for VSGC-1700 : insertStatement wrong in v3.g
 *
 * @test/compile-error
 */

insert 10 after 5;
